--- a/templates/actor/actor-character-sheet.hbs
+++ b/templates/actor/actor-character-sheet.hbs
@@ -44,7 +44,7 @@
       }}
     </div>
     {{!-- Sheet Tab Navigation --}}
-    <nav class="sheet-tabs tabs" data-group="primary">
+  <nav class="sheet-tabs tabs" data-group="primary">
       {{!-- Default tab is specified in actor-sheet.mjs --}}
       <a class="item" data-tab="status">STATUS</a>
       <a class="item" data-tab="perks">PERKS</a>
@@ -52,8 +52,9 @@
       <a class="item" data-tab="medicine">AID</a>
       <a class="item" data-tab="backpack">BACKPACK</a>
       <a class="item" data-tab="crafting">CRAFTING</a>
+      <a class="item" data-tab="notes">NOTES</a>
       {{#GM}}<a class="item" data-tab="effects">EFFECTS</a>{{/GM}}
-    </nav>
+  </nav>
 
     {{!-- Sheet Body --}}
     <section class="sheet-body">
@@ -111,12 +112,12 @@
         {{> "systems/arcane-arcade-fallout/templates/actor/parts/actor-items.hbs"}}
       </div>
 
-      {{!-- Owned Perks Tab --}}
+      {{!-- Perks Tab --}}
       <div class="tab perks" data-group="primary" data-tab="perks">
         {{> "systems/arcane-arcade-fallout/templates/actor/parts/actor-perks.hbs"}}
       </div>
 
-      {{!-- Owned Perks Tab --}}
+      {{!-- Medicine Tab --}}
       <div class="tab medicine" data-group="primary" data-tab="medicine">
         {{> "systems/arcane-arcade-fallout/templates/actor/parts/actor-medicines.hbs"}}
       </div>
@@ -130,6 +131,11 @@
       <div class="tab crafting" data-group="primary" data-tab="crafting">
         {{> "systems/arcane-arcade-fallout/templates/actor/parts/actor-crafting.hbs"}}
       </div>
+      {{!-- Notes Tab --}}
+      <div class="tab notes" data-group="primary" data-tab="notes">
+        {{> "systems/arcane-arcade-fallout/templates/actor/parts/actor-notes.hbs"}}
+      </div>
+
       {{#GM}}
       {{!-- Effects Tab --}}
       <div class="tab effects" data-group="primary" data-tab="effects">
