Added convert junk to material
Added an icon in Crafting tab of Actor, a dialog and a function to convert junk into mats. Also fixed formatCompendiumItem to be case-independant.

--- a/templates/actor/parts/actor-crafting.hbs
+++ b/templates/actor/parts/actor-crafting.hbs
@@ -65,6 +65,10 @@
                                    title="{{localize 'DOCUMENT.Delete' type='item'}}">
                                     <i class="fas fa-trash"></i>
                                 </a>
+                                 <a class="item-control" data-junkToMat data-item-id="{{ item._id }}"
+                                   title="Convert Junk to Materials">
+                                    <i class="fa-solid fa-screwdriver-wrench"></i>
+                                </a>
                             </div>
                         </li>
                     </td>
