--- a/templates/actor/parts/actor-medicines.hbs
+++ b/templates/actor/parts/actor-medicines.hbs
@@ -1,33 +1,47 @@
 {{#each medicines as |item id|}}
 <div class="box-medicines">
-    <li class="item flexrow" data-item-id="{{ item._id }}">
-        <table class="perk-table" style="border: solid 1px">
-            <tr>
-                <td>
-                    <div class="perk-div">
-                        <h3>{{ item.name }}</h3>
-                        <a class="item-control"
-                           data-edit
-                           data-item-id="{{ item._id }}"
-                           title="View Item Details">
-                            <img class="perk-image" src="{{ item.img }}" />
-                        </a>
-                    </div>
-                    <div class="perk-div">
-                        <i style="padding:3px;" data-itemsubtraction data-item="{{item._id}}" class="fas fa-minus-square"></i>
-                        {{ system.quantity }}
-                        <i style="padding:3px;" data-itemaddition data-item="{{item._id}}" class="fas fa-plus-square"></i>
-                    </div>
-                    <div class="perk-div">
-                        <a style="float: right; margin-right: 10px;margin-top:-20px;"
-                           class="item-control item-delete"
-                           title="{{localize 'DOCUMENT.Delete' type='item'}}">
-                            <i class="fas fa-trash"></i>
-                        </a>
-                    </div>
-                </td>
-            </tr>
-        </table>
-    </li>
+  <li class="item flexrow" data-item-id="{{ item._id }}">
+    <table class="perk-table" style="border: solid 1px">
+      <tr>
+        <td>
+          <div class="perk-div">
+            <h3>{{ item.name }}</h3>
+            <a
+              class="item-control"
+              data-edit
+              data-item-id="{{ item._id }}"
+              title="View Item Details"
+            >
+              <img class="perk-image" src="{{ item.img }}" />
+            </a>
+          </div>
+          <div class="perk-div">
+            <i
+              style="padding: 3px"
+              data-itemsubtraction
+              data-item="{{ item._id }}"
+              class="fas fa-minus-square"
+            ></i>
+            {{ system.quantity }}
+            <i
+              style="padding: 3px"
+              data-itemaddition
+              data-item="{{ item._id }}"
+              class="fas fa-plus-square"
+            ></i>
+          </div>
+          <div class="perk-div">
+            <a
+              style="float: right; margin-right: 10px; margin-top: -20px"
+              class="item-control item-delete"
+              title="{{localize 'DOCUMENT.Delete' type='item'}}"
+            >
+              <i class="fas fa-trash"></i>
+            </a>
+          </div>
+        </td>
+      </tr>
+    </table>
+  </li>
 </div>
 {{/each}}
