--- a/css/falloutzero.css
+++ b/css/falloutzero.css
@@ -550,8 +550,7 @@ td,
   font-size: 8pt;
 }
 .status .skill-table td,
-.status .status-table td,
-.upgrades-table td {
+.status .status-table td {
   border: solid 1px;
 }
 .status .skill-table {
@@ -569,7 +568,7 @@ td,
   font-size: 10pt;
   letter-spacing: 0rem;
 }
-.sheet table .status-table {
+.sheet. table .status-table {
   vertical-align: top;
 }
 .sheet .perk-table td {
@@ -694,19 +693,16 @@ td,
   content: url('/systems/arcane-arcade-fallout/assets/Cap_Front_Facing.webp');
 }
 
-.sheet .addRemoveCaps button,
-.sheet .upgradeBtn button {
+.sheet .addRemoveCaps button {
   display: flex;
   padding: 0;
 }
-.sheet .addRemoveCaps button:disabled,
-.sheet .upgradeBtn button:disabled  {
+.sheet .addRemoveCaps button:disabled {
   opacity: 25%;
   cursor: not-allowed;
 }
 
-.sheet .addRemoveCaps button:disabled:hover,
-.sheet .upgradeBtn button:disabled:hover  {
+.sheet .addRemoveCaps button:disabled:hover {
   opacity: 25%;
   cursor: not-allowed;
   border: initial;
@@ -714,13 +710,11 @@ td,
   color: #01e998;
 }
 
-.sheet .addRemoveCaps button:disabled i,
-.sheet .upgradeBtn button:disabled i {
+.sheet .addRemoveCaps button:disabled i {
   cursor: not-allowed;
 }
 
-.sheet .addRemoveCaps > button > i,
-.sheet .upgradeBtn > button > i  {
+.sheet .addRemoveCaps > button > i {
   margin: 0;
 }
 
@@ -826,15 +820,4 @@ form td .status-notes li:hover {
 }
 .armorbox{
     padding:5px;
-}
-
-.upgradeBtnUp{
-  margin:0 auto; 
-  display: inline; 
-  background:none;
-}
-.upgradeBtnDown{
-  margin:0 auto; 
-  display: inline; 
-  background:none;
 }
